<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/agora_setting_dialog_width"
    android:layout_height="@dimen/agora_setting_dialog_height">
    <LinearLayout
        android:id="@+id/agora_setting_dialog_layout"
        android:layout_width="@dimen/agora_setting_dialog_layout_width"
        android:layout_height="@dimen/agora_setting_dialog_layout_height"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@drawable/agora_class_room_round_rect_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/agora_setting_dialog_line_height"
            android:background="@color/theme_gray_lighter">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="gravity"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/agora_setting_dialog_text_margin_horizontal"
                android:layout_marginLeft="@dimen/agora_setting_dialog_text_margin_horizontal"
                android:text="@string/agora_setting_title"
                android:textSize="@dimen/agora_setting_dialog_text_size_large"
                android:textColor="@color/theme_text_color_black"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_thin"
            android:background="@color/theme_border_class_room"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/agora_setting_dialog_line_height_larger">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/agora_setting_camera_text"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/agora_setting_dialog_switch_height"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/agora_setting_dialog_text_margin_horizontal"
                android:layout_marginLeft="@dimen/agora_setting_dialog_text_margin_horizontal"
                android:layout_alignTop="@id/agora_setting_camera_switch"
                android:textAlignment="gravity"
                android:gravity="center_vertical"
                android:text="@string/agora_setting_camera"
                android:textSize="@dimen/agora_setting_dialog_text_size"
                android:textColor="@color/theme_text_color_black"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/agora_setting_camera_switch"
                android:layout_width="@dimen/agora_setting_dialog_switch_width"
                android:layout_height="@dimen/agora_setting_dialog_switch_height"
                android:background="@drawable/agora_status_bar_setting_switch"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="@dimen/agora_setting_dialog_text_margin_horizontal"
                android:layout_marginRight="@dimen/agora_setting_dialog_text_margin_horizontal"
                android:layout_marginTop="@dimen/agora_setting_dialog_content_margin_vertical"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/agora_setting_dialog_facing_button_height"
                android:layout_below="@id/agora_setting_camera_switch"
                android:layout_alignEnd="@id/agora_setting_camera_text"
                android:layout_alignTop="@id/agora_setting_camera_back"
                android:textAlignment="gravity"
                android:gravity="center"
                android:text="@string/agora_setting_facing"
                android:textSize="@dimen/agora_setting_dialog_text_size"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/agora_setting_camera_back"
                android:layout_width="@dimen/agora_setting_dialog_facing_button_width"
                android:layout_height="@dimen/agora_setting_dialog_facing_button_height"
                android:layout_below="@id/agora_setting_camera_switch"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/agora_setting_dialog_text_margin_horizontal"
                android:layout_marginRight="@dimen/agora_setting_dialog_text_margin_horizontal"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/agora_setting_dialog_content_margin_vertical"
                android:textAlignment="gravity"
                android:gravity="center"
                android:text="@string/agora_setting_facing_back"
                android:textSize="@dimen/agora_setting_dialog_text_size"
                android:textColor="@color/agora_setting_button_text_color"
                android:background="@drawable/agora_setting_button_bg"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/agora_setting_camera_front"
                android:layout_width="@dimen/agora_setting_dialog_facing_button_width"
                android:layout_height="@dimen/agora_setting_dialog_facing_button_height"
                android:layout_below="@id/agora_setting_camera_switch"
                android:layout_toStartOf="@id/agora_setting_camera_back"
                android:layout_toLeftOf="@id/agora_setting_camera_back"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:textAlignment="gravity"
                android:gravity="center"
                android:text="@string/agora_setting_facing_front"
                android:textSize="@dimen/agora_setting_dialog_text_size"
                android:textColor="@color/agora_setting_button_text_color"
                android:background="@drawable/agora_setting_button_bg"/>
        </RelativeLayout>
        <View android:layout_width="match_parent"
            android:layout_height="@dimen/divider_thin"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:background="@color/theme_border_class_room"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/agora_setting_dialog_line_height">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/agora_setting_mic_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textAlignment="gravity"
                android:gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/agora_setting_dialog_text_margin_horizontal"
                android:layout_marginLeft="@dimen/agora_setting_dialog_text_margin_horizontal"
                android:text="@string/agora_setting_mic"
                android:textSize="@dimen/agora_setting_dialog_text_size"
                android:textColor="@color/theme_text_color_black"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/agora_setting_mic_switch"
                android:layout_width="@dimen/agora_setting_dialog_switch_width"
                android:layout_height="@dimen/agora_setting_dialog_switch_height"
                android:layout_centerVertical="true"
                android:background="@drawable/agora_status_bar_setting_switch"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/agora_setting_dialog_text_margin_horizontal"
                android:layout_marginRight="@dimen/agora_setting_dialog_text_margin_horizontal"/>
        </RelativeLayout>
        <View android:layout_width="match_parent"
            android:layout_height="@dimen/divider_thin"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:background="@color/theme_border_class_room"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/agora_setting_dialog_line_height">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/agora_setting_loudspeaker_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textAlignment="gravity"
                android:gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/agora_setting_dialog_text_margin_horizontal"
                android:layout_marginLeft="@dimen/agora_setting_dialog_text_margin_horizontal"
                android:text="@string/agora_setting_speaker"
                android:textSize="@dimen/agora_setting_dialog_text_size"
                android:textColor="@color/theme_text_color_black"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/agora_setting_loudspeaker_switch"
                android:layout_width="@dimen/agora_setting_dialog_switch_width"
                android:layout_height="@dimen/agora_setting_dialog_switch_height"
                android:layout_centerVertical="true"
                android:background="@drawable/agora_status_bar_setting_switch"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/agora_setting_dialog_text_margin_horizontal"
                android:layout_marginRight="@dimen/agora_setting_dialog_text_margin_horizontal"/>
        </RelativeLayout>
        <View android:layout_width="match_parent"
            android:layout_height="@dimen/divider_thin"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:background="@color/theme_border_class_room"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/agora_setting_exit_button"
                android:layout_width="@dimen/agora_setting_dialog_leave_button_width"
                android:layout_height="@dimen/agora_setting_dialog_leave_button_height"
                android:textAlignment="gravity"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:textColor="@color/agora_setting_leave_text_color"
                android:text="@string/agora_setting_leave"
                android:textSize="@dimen/agora_setting_dialog_text_size_large"
                android:background="@drawable/agora_setting_leave_btn_bg"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>